--- a/src/styles/_page-home-section-hero.scss
+++ b/src/styles/_page-home-section-hero.scss
@@ -9,6 +9,7 @@
   &__content {
     @extend %content-layout;
 
+    width: 100%;
     max-width: 725px;
   }
 
